welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:36: error: Missing closing brace `}' assumed here
}
^